# Training-Center-Platform

./: LICENSE  README.md  app.py  package-lock.json  package.json  pyproject.toml
templates/: dashboard.html  index.html  login.html  managingAddUsr.html  managingDelUsr.html  tool.html
